# hackathon-schneider-pollution

./: .gitignore  README.md  pyproject.toml
predictions/: predictions_task_2.json  predictions_task_3.json
src/: data_peparation.py  eda_notebook.ipynb  q1_notebook.ipynb  q2_notebook.ipynb  q3_notebook.ipynb
